fix: fix testimonials popup (z-index not working with transform)

--- a/online-zoo/src/assets/styles/index-adaptive.scss
+++ b/online-zoo/src/assets/styles/index-adaptive.scss
@@ -324,6 +324,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    transform: none;
   }
   .feedback-card {
     width: 100%;
