--- a/online-zoo/src/assets/styles/index.scss
+++ b/online-zoo/src/assets/styles/index.scss
@@ -405,7 +405,7 @@
   }
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    width: 115px;
+    width: 13%;
     height: 100%;
     border-radius: 5px;
     background: $scrollbar-color;
@@ -413,7 +413,7 @@
   }
   input[type=range]::-moz-range-thumb {
     -webkit-appearance: none;
-    width: 115px;
+    width: 13%;
     height: 100%;
     border-radius: 5px;
     background: $scrollbar-color;
